--- a/css/main.css
+++ b/css/main.css
@@ -8,22 +8,28 @@ html {
     box-sizing: inherit; /* keep */
 }
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto Slab', Big Caslon, Georgia, serif;
     background: #5598b2; /* keep */
     color: #333; /* keep */
     margin: 0; /* keep */
 }
 h1, h2 {
-    font-family: serif;
+    font-family: 'News Cycle', Helvetica, Arial, sans-serif;
+    letter-spacing: .05rem;
+    margin: 0;
 }
 #tagline {
     font-style: italic;
+}
+section {
+  max-width: 600px;
 }
 /* all images will stretch to fill their containing element */
 img {
     display: block; /* keep */
     width: 100%; /* keep */
 }
+
 
 /* In the grid container below, you will change the columns,
     the rows, and the AREAS to layout the page as instructed
@@ -38,11 +44,19 @@ img {
     margin: auto; /* keep */
     display: grid; /* keep */
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(7, auto);
     grid-template-areas:
-        "header arial georgia pairing bobwhite-quail"
-        "readability line-length helvetica typeface footer";
+        "header header header header header"
+        "pairing pairing pairing arial georgia"
+        "bobwhite-quail bobwhite-quail readability readability readability"
+        "bobwhite-quail bobwhite-quail line-length line-length line-length"
+        "typeface typeface typeface helvetica helvetica "
+        "typeface typeface typeface . ."
+        "footer footer footer footer footer";
+      line-height: 1.1;
+
 }
+
 
 /* all grid items -
     these are the 10 direct children of the container
@@ -53,43 +67,66 @@ img {
 header {
     grid-area: header; /* keep */
     background: #fff; /* keep */
+    text-align: center;
+    margin: 0;
+    padding: 2rem;
+    font-size: 1.5rem;
 }
 #arial {
     grid-area: arial; /* keep */
     background: #a8e8ff; /* keep */
+    padding: 2rem 1rem 1rem 0rem;
+    font-size: .75rem;
 }
 #georgia {
     grid-area: georgia; /* keep */
     background: #a8e8ff; /* keep */
+    padding: 2rem 1rem 1rem 0rem;
+    font-size: .75rem;
 }
 #pairing {
     grid-area: pairing; /* keep */
     background: #a8e8ff; /* keep */
+    padding: 2rem;
+    margin: 0;
 }
 #bobwhite-quail {
     grid-area: bobwhite-quail; /* keep */
     background: #d2f4ff; /* keep */
+    padding: 2rem 1rem 2rem 2rem;
+    font-size: .75rem;
 }
 #readability {
     grid-area: readability; /* keep */
     background: #d2f4ff; /* keep */
+    padding: 2rem 2rem 0rem 1rem;
 }
 #line-length {
     grid-area: line-length; /* keep */
     background: #d2f4ff; /* keep */
+    padding: 2rem 2rem 0rem 1rem;
 }
 #helvetica {
     grid-area: helvetica; /* keep */
     background: #fff; /* keep */
+    padding: 2rem;
+    margin: 2rem;
+    font-size: .75rem;
 }
 #typeface {
     grid-area: typeface; /* keep */
     color: #d2f4ff; /* keep */
     background: #5598b2; /* keep */
+    padding: 2rem 0rem 3rem 2rem;
+    text-shadow: 1px 1px 1px #666;
+}
+#typeface a {
+  text-shadow: none;
 }
 footer {
     grid-area: footer; /* keep */
     background: #b2988a; /* keep */
+    text-align: center;
 }
 
 /* end of all 10 grid items */
@@ -105,3 +142,51 @@ a:hover {
 }
 
 /* media queries below - only 1 is needed */
+@media screen and (max-width: 750px) {
+  #container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(9, auto);
+    grid-template-areas:
+      "header header"
+      "arial georgia"
+      "pairing pairing"
+      "bobwhite-quail bobwhite-quail"
+      "readability readability"
+      "line-length line-length"
+      "helvetica helvetica"
+      "typeface typeface"
+      "footer footer";
+      margin: 0;
+  }
+  header img {
+    display: none;
+  }
+  #arial {
+    padding: 1rem .5rem 1rem 1rem;
+  }
+  #georgia {
+    padding: 1rem 1rem 1rem .5rem;
+  }
+  #pairing {
+      padding: 1rem 1rem 2rem 1rem;
+  }
+  #bobwhite-quail {
+      padding: 1rem 1rem 0rem 1rem;
+  }
+  #readability {
+      padding: 2rem 1rem 0rem 1rem;
+  }
+  #line-length {
+      padding: 2rem 2rem 2rem 1rem;
+  }
+  #helvetica {
+      padding: 1rem;
+      margin: 0rem;
+  }
+  #typeface {
+      padding: 2rem 1rem 3rem 1rem;
+  }
+  footer {
+      padding: 1.5rem 1rem 1.5rem 1rem;
+  }
+}
